...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comparejobscont"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
...

            <TextView
                android:id="@+id/title1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/title2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/company1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/company2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/city1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/city2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/state1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/state2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/adjusted_yearly_salary1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/adjusted_yearly_salary2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/adjusted_yearly_bonus1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/adjusted_yearly_bonus2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/retirement1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/retirement2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/restricted_stock1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/restricted_stock2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/personalized_learning_and_development1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/personalized_learning_and_development2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/family_planning_assistance1"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

            <TextView
                android:id="@+id/family_planning_assistance2"
                android:layout_width="58dp"
                android:layout_height="55dp"
...

        <Button
            android:id="@+id/compare_other_jobs_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/return_main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
