<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comparejobs"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/compare_jobs_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="COMPARE JOBS"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/compare_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="Compare" />

        <Button
            android:id="@+id/return_to_main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="Return to Main Menu" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>