<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainmenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:text="MAIN MENU"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/edit_current_job_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="Edit Current Job" />

        <Button
            android:id="@+id/enter_job_offer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="Enter Job Offer" />

        <Button
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="Adjust Comparison Settings" />

        <Button
            android:id="@+id/compare_jobs_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="Compare Jobs" />

    </LinearLayout>
...
